--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,7 +9,7 @@
     <a href="/orders" style="float:right;">
         <b>ЗАКАЗЫ &cudarrr;</b>
     </a>
-    <a href="/cart/items" style="float:right;">
+    <a href="/cart/products" style="float:right;">
         <b>КОРЗИНА &cudarrr;</b>
     </a>
     <table style="width:70%;margin-left:auto;margin-right:auto;">
@@ -47,32 +47,32 @@
                 </form>
             </td>
         </tr>
-        <tr th:each="itemsRow : ${items}">
-            <td th:each="item : ${itemsRow}">
+        <tr th:each="productsRow : ${products}">
+            <td th:each="product : ${productsRow}">
                 <table>
                     <tr>
                         <td>
-                            <a th:href="${'/items/'+item.getId()}">
-                                <img width="300" height="300" th:src="${'http://localhost:8080/'+item.getImgPath()}">
+                            <a th:href="${'/products/'+product.getId()}">
+                                <img width="300" height="300" th:src="${'http://localhost:8080/'+product.getImgPath()}">
                             </a>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <b th:text="${item.getTitle()}"></b>
+                            <b th:text="${product.getName()}"></b>
                         </td>
                         <td>
-                            <b th:text="${item.getPrice()}+' руб.'"></b>
+                            <b th:text="${product.getPrice()}+' руб.'"></b>
                         </td>
                     </tr>
                     <tr>
-                        <td th:text="${item.getDescription()}"></td>
+                        <td th:text="${product.getDescription()}"></td>
                     </tr>
                     <tr>
                         <td>
-                            <form th:action="${'/main/items/'+item.getId()}" method="post">
+                            <form th:action="${'/main/products/'+product.getId()}" method="post">
                                 <button name="action" value="minus">-</button>
-                                <span th:text="${item.getCount()}"></span>
+                                <span th:text="${product.getCount()}"></span>
                                 <button name="action" value="plus">+</button>
                                 <button name="action" value="plus" th:if="${item.getCount()==0}" style="float:right;">В корзину</button>
                             </form>
