--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -9,10 +9,10 @@
 <a href="/orders" style="float:right;">
     <b>ЗАКАЗЫ &cudarrr;</b>
 </a>
-<a href="/cart/items" style="float:right;">
+<a href="/cart/products" style="float:right;">
     <b>КОРЗИНА &cudarrr;</b>
 </a>
-<a href="/main/items" style="float:right;">
+<a href="/main/products" style="float:right;">
     <b>ГЛАВНАЯ &cudarrr;</b>
 </a>
 <h1 style="text-align:center" th:if="${newOrder}">Поздравляем! Успешная покупка! &#128578;</h1>
@@ -22,25 +22,25 @@
             <h2 th:text="${'Заказ №'+order.id()}"></h2>
         </td>
     </tr>
-    <tr th:each="item : ${order.items()}">
+    <tr th:each="product : ${order.products()}">
         <td>
             <table>
                 <tr>
                     <td>
-                        <a th:href="${'/items/'+item.getId()}">
-                            <img width="300" height="300" th:src="${'http://localhost:8080/'+item.getImgPath()}">
+                        <a th:href="${'/products/'+product.getId()}">
+                            <img width="300" height="300" th:src="${'http://localhost:8080/'+product.getImgPath()}">
                         </a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <b th:text="${item.getTitle()}"></b>
+                        <b th:text="${product.getName()}"></b>
                     </td>
                     <td>
-                        <b th:text="${item.getCount()}+' шт.'"></b>
+                        <b th:text="${product.getCount()}+' шт.'"></b>
                     </td>
                     <td>
-                        <b th:text="${item.getPrice()*item.getCount()}+' руб.'"></b>
+                        <b th:text="${product.getPrice()*product.getCount()}+' руб.'"></b>
                     </td>
                 </tr>
             </table>
