--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -9,28 +9,28 @@
     <a href="/orders" style="float:right;">
         <b>ЗАКАЗЫ &cudarrr;</b>
     </a>
-    <a href="/cart/items" style="float:right;">
+    <a href="/cart/products" style="float:right;">
         <b>КОРЗИНА &cudarrr;</b>
     </a>
-    <a href="/main/items" style="float:right;">
+    <a href="/main/products" style="float:right;">
         <b>ГЛАВНАЯ &cudarrr;</b>
     </a>
     <div style="width:70%;margin-left:auto;margin-right:auto;">
         <p>
-            <img width="300" height="300" th:src="${'http://localhost:8080/'+item.getImgPath()}">
+            <img width="300" height="300" th:src="${'http://localhost:8080/'+product.getImgPath()}">
         </p>
         <p>
-            <b th:text="${item.getTitle()}"></b>
-            <b th:text="${item.getPrice()}+' руб.'" style="text-align:right;"></b>
+            <b th:text="${product.getName()}"></b>
+            <b th:text="${product.getPrice()}+' руб.'" style="text-align:right;"></b>
         </p>
         <p>
-            <span th:text="${item.getDescription()}"></span>
+            <span th:text="${product.getDescription()}"></span>
         </p>
-        <form th:action="${'/items/'+item.getId()}" method="post">
+        <form th:action="${'/products/'+product.getId()}" method="post">
             <button name="action" value="minus">-</button>
-            <span th:text="${item.getCount()}"></span>
+            <span th:text="${product.getCount()}"></span>
             <button name="action" value="plus">+</button>
-            <button name="action" value="plus" th:if="${item.getCount()==0}" style="float:right;">В корзину</button>
+            <button name="action" value="plus" th:if="${product.getCount()==0}" style="float:right;">В корзину</button>
         </form>
     </div>
 </body>
