--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,6 +6,9 @@
 </head>
 
 <body>
+    <a href="/products/new" style="float:right;">
+        <b>ДОБАВИТЬ &cudarrr;</b>
+    </a>
     <a href="/orders" style="float:right;">
         <b>ЗАКАЗЫ &cudarrr;</b>
     </a>
