--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -73,11 +73,12 @@
                     </tr>
                     <tr>
                         <td>
-                            <form th:action="${'/main/products/'+product.getId()}" method="post">
-                                <button name="action" value="minus">-</button>
+                            <form th:action="@{/main/products/{id}(id=${product.getId()})}" method="post">
+                                <input type="hidden" name="action" value="plus" />
+                                <button type="submit" name="action" value="minus">-</button>
                                 <span th:text="${product.getCount()}"></span>
-                                <button name="action" value="plus">+</button>
-                                <button name="action" value="plus" th:if="${product.getCount()==0}" style="float:right;">В корзину</button>
+                                <button type="submit" name="action" value="plus">+</button>
+                                <button type="submit" name="action" value="plus" th:if="${product.getCount()==0}" style="float:right;">В корзину</button>
                             </form>
                         </td>
                     </tr>
