Add balance on cart web page

--- a/storefront/src/main/resources/templates/cart.html
+++ b/storefront/src/main/resources/templates/cart.html
@@ -45,6 +45,11 @@
     </tr>
     <tr>
         <td style="text-align:right">
+            <b th:text="'Баланс: '+${balance}+' руб.'"></b>
+        </td>
+    </tr>
+    <tr>
+        <td style="text-align:right">
             <b th:text="'Итого: '+${total}+' руб.'"></b>
         </td>
     </tr>
