--- a/storefront/src/main/resources/templates/product.html
+++ b/storefront/src/main/resources/templates/product.html
@@ -27,9 +27,9 @@
             <span th:text="${product.getDescription()}"></span>
         </p>
         <form th:action="@{/products/{id}(id=${product.getId()})}" method="post">
-            <button type="submit" name="action" value="minus">-</button>
-            <span th:text="${product.getCount()}"></span>
-            <button type="submit" name="action" value="plus">+</button>
+            <button type="submit" name="action" value="minus" th:if="${product.getCount()>0}">-</button>
+            <span th:text="${product.getCount()}" th:if="${product.getCount()>0}"></span>
+            <button type="submit" name="action" value="plus" th:if="${product.getCount()>0}">+</button>
             <button type="submit" name="action" value="plus" th:if="${product.getCount()==0}" style="float:right;">В корзину</button>
         </form>
     </div>
