--- a/storefront/src/main/resources/templates/main.html
+++ b/storefront/src/main/resources/templates/main.html
@@ -6,6 +6,9 @@
 </head>
 
 <body>
+    <a href="/logout" style="float:right;">
+        <b>ВЫЙТИ &cudarrr;</b>
+    </a>
     <a href="/products/new" style="float:right;">
         <b>ДОБАВИТЬ &cudarrr;</b>
     </a>
