--- a/storefront/src/main/resources/templates/orders.html
+++ b/storefront/src/main/resources/templates/orders.html
@@ -6,6 +6,9 @@
 </head>
 
 <body>
+<a href="/logout" style="float:right;">
+    <b>ВЫЙТИ &cudarrr;</b>
+</a>
 <a href="/cart/products" style="float:right;">
     <b>КОРЗИНА &cudarrr;</b>
 </a>
